--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@formspree/react": "^2.5.1",
 		"bootstrap": "^5.3.2",
 		"react": "^18.2.0",
+		"react-animate-on-scroll": "^2.1.7",
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
