--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"react-icons": "^4.11.0",
 		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
-		"react-tooltip": "^5.21.5"
+		"react-tooltip": "^5.21.5",
+		"vite-plugin-eslint": "^1.8.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.15",
