--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-router-dom": "^6.21.1",
 		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
 		"react-tooltip": "^5.21.5",
