--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
 		"react-tooltip": "^5.21.5",
+		"react-typed": "^1.2.0",
 		"vite-plugin-eslint": "^1.8.1"
 	},
 	"devDependencies": {
