--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"bootstrap": "^5.3.2",
+		"i18next": "^23.10.1",
+		"i18next-browser-languagedetector": "^7.2.1",
 		"react": "^18.2.0",
 		"react-animate-on-scroll": "^2.1.7",
 		"react-bootstrap": "^2.9.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
+		"react-i18next": "^14.1.0",
 		"react-icons": "^4.11.0",
 		"react-router-dom": "^6.21.1",
 		"react-router-hash-link": "^2.4.3",
