--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bootstrap": "^5.3.2",
 		"i18next": "^23.10.1",
 		"i18next-browser-languagedetector": "^7.2.1",
+		"i18next-http-backend": "^2.5.0",
 		"react": "^18.2.0",
 		"react-animate-on-scroll": "^2.1.7",
 		"react-bootstrap": "^2.9.0",
