--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-helmet": "^6.1.0",
 		"react-i18next": "^14.1.0",
 		"react-icons": "^4.11.0",
+		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.21.1",
 		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
