--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"bootstrap": "^5.3.2",
+		"custom-cursor-react": "^1.0.5",
+		"gsap": "^3.12.5",
 		"i18next": "^23.10.1",
 		"i18next-browser-languagedetector": "^7.2.1",
 		"i18next-http-backend": "^2.5.0",
