--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"react-router-dom": "^6.21.1",
 		"react-router-hash-link": "^2.4.3",
 		"react-scroll": "^1.9.0",
+		"react-text-loop": "^2.3.0",
 		"react-tooltip": "^5.21.5",
+		"react-type-animation": "^3.2.0",
 		"react-typed": "^1.2.0",
 		"vite-plugin-eslint": "^1.8.1"
 	},
