--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
 	},
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
+		"@radix-ui/react-select": "^2.1.5",
 		"bootstrap": "^5.3.2",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"custom-cursor-react": "^1.0.5",
 		"gsap": "^3.12.5",
 		"i18next": "^23.10.1",
 		"i18next-browser-languagedetector": "^7.2.1",
 		"i18next-http-backend": "^2.5.0",
+		"lucide-react": "^0.474.0",
 		"react": "^18.2.0",
 		"react-animate-on-scroll": "^2.1.7",
 		"react-bootstrap": "^2.9.0",
@@ -32,6 +36,7 @@
 		"react-tooltip": "^5.21.5",
 		"react-type-animation": "^3.2.0",
 		"react-typed": "^1.2.0",
+		"tailwind-merge": "^2.6.0",
 		"vite-plugin-eslint": "^1.8.1"
 	},
 	"devDependencies": {
