--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@formspree/react": "^2.5.1",
 		"@radix-ui/react-select": "^2.1.5",
 		"bootstrap": "^5.3.2",
+		"canvas-confetti": "^1.9.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"custom-cursor-react": "^1.0.5",
